# pointless

./: .clang-tidy  .clang-tidy_  .clangd  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  TODO  code.code-workspace  pre-push.sh  vcpkg.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-ios.yml  build-macos.yml  build.yml  clang-tidy.yml  core_rs.yml  electron.yml  pre-commit.yml
LICENSES/: OFL-1.1.txt
assets/android/values/: ic_launcher_background.xml
assets/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
cmake/: CompilerFlags.cmake  ios-utils.cmake
electron/: .gitignore  code.code-workspace  index.html  main.js  package-lock.json  package.json  playwright.config.js  preload.js  run_tests.sh  vite.config.mjs
electron/src/: auth.js
electron/src/core/: data.js  tag.js  task.js
electron/src/renderer/: login.css  login.html  login.js
electron/src/svelte/: App.svelte  MainScreen.svelte  global.css  main.js
electron/test/: auth.test.js  core.test.js  login.playwright.test.js  main-screen.playwright.test.js  test-utils.js
pointless_core/: Cargo.toml
pointless_core/src/: caldav_client.rs  clock.rs  context.rs  data.rs  data_provider.rs  date_utils.rs  error.rs  ical_parser.rs  lib.rs  local_data.rs  supabase.rs  tag.rs  task.rs
pointless_core/tests/: fixture_tests.rs
pointless_core/tests/fixtures/: test.json
scripts/: archive-ios.sh  build-ios-release.sh  build-slint-yocto.sh  build-yocto.sh  ci-dump-base64-to-file.sh  ci-setup-ios-keychain.sh  clean_vcpkg.sh  deploy-ios.sh  deploy-linux.sh  deploy-macos.sh  generate-ios-assets.sh  github-ios-set-secrets.sh  list-ios-provisioning-profiles.sh  package-macos.sh  restore-ios-keychain.sh  run-ios.sh  sign-macos.sh  unlock-ios-keychain.sh  upload-ipa.sh
slint/: Cargo.toml
slint/pointless_core/: Cargo.toml
slint/pointless_core/src/: calendar.rs  date_utils.rs  ical_parser.rs  linux_calendar.rs  local_data.rs  merger.rs  task.rs  utils.rs
slint/pointless_gui/: Cargo.toml  build.rs
slint/pointless_gui/src/: main.rs
slint/pointless_gui/ui/: main.slint  style.slint
slint/pointless_gui/ui/components/: calendar.slint  checkbox.slint  context_menu.slint  edit_task_page.slint  font_awesome_button.slint  line_edit.slint  menu_item.slint  side_panel.slint  tag_badge.slint  task_item.slint  task_list.slint  toggle_button.slint  view_button.slint  week_navigator.slint  week_view.slint
src/: CMakeLists.txt
src/cli/: main.cpp
src/core/: CMakeLists.txt  Clock.cpp  Clock.h  apple_calendar_provider.h  apple_calendar_provider.mm  cached_data_provider.cpp  cached_data_provider.h  caldav_client.cpp  caldav_client.h  calendar_info.cpp  calendar_provider.cpp  calendar_provider.h  context.cpp  context.h  data.cpp  data.h  data_provider.cpp  data_provider.h  date_utils.cpp  date_utils.h  error.h  file_data_provider.cpp  file_data_provider.h  ical_parser.cpp  ical_parser.h  item.cpp  item.h  linux_calendar_provider.cpp  linux_calendar_provider.h  local_data.cpp  local_data.h  logger.cpp  logger.h  merger.cpp  merger.h  pointless_core.cpp  pointless_core.h  rename_tag.cpp  supabase.cpp  supabase.h  (+14 more)
src/core/tests/: test.json  test_caldav.cpp  test_data.cpp  test_date_utils.cpp  test_ical_parser.cpp  test_local_data.cpp  test_null_values.json  test_supabase.cpp  test_tag.cpp  test_task.cpp  test_taskmanager.cpp
src/gui/: About.qml  AboutPage.qml  AddTagPopup.qml  CMakeLists.txt  Calendar.qml  CalendarsPage.qml  CheckBox.qml  CleanupPage.qml  Clock.cpp  Clock.h  DataController.cpp  DataController.h  EditTask.qml  EditTaskPage.qml  ErrorPopup.qml  FontAwesomeButton.qml  LaterView.qml  LineEdit.qml  LoginScreen.qml  Main.qml  Menu.qml  MenuItem.qml  NotesPopup.qml  Page.qml  RenameTagPopup.qml  SearchPage.qml  SidePanel.qml  SoonView.qml  Style.qml  Tag.qml  TagsPage.qml  TagsView.qml  Task.qml  TaskView.qml  TasksByTagPage.qml  ToggleButton.qml  ViewButton.qml  WeekNavigator.qml  WeekView.qml  application.cpp  (+37 more)
src/gui/tests/: .clang-tidy  test_calendarmodel.cpp  test_data.json  test_data_controller.cpp  test_date_utils.cpp  test_gui.cpp  test_gui_controller.cpp  test_local_settings.cpp  test_server.h  test_utils.h
src/ios/: ExportOptions-TestFlight.plist.in  Info.plist.in
src/mac/: Info.plist.in  pointless.entitlements
triplets/: x64-linux-asan.cmake  x64-linux-dynamic-asan.cmake
