# SPDX-FileCopyrightText: 2025 Sergio Martins
# SPDX-License-Identifier: MIT
[package]
name = "pointless_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1"
base64 = "0.22"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
